docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-10-55-54.ceg/compilation.txt
Grupo.java:28: error: ';' expected
    boolean puedeAgregar==true;
                        ^
1 error
Not compiled
